# AIxeleratorService

./: .clang-format  .gitignore  .gitlab-ci.old  .gitlab-ci.yml  .gitlab-ci.yml.hetjob  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  batch.sh  setupEnvRWTH.sh  testCMake.sh
BUILD-CI/: CMakeCache.txt  Makefile  cmake_install.cmake
BUILD-CI/test/: Makefile
cmake/: FindScorep.cmake  PrintHelper.cmake  PrintTargetProperties.cmake  README.md
examples/: CMakeLists.txt  README.md  example-mwe.cpp
models/: .gitignore  CMakeLists.txt
models/onnxModels/: convertFromTorch.py
models/solModels/: deployModel.py
models/solModels/common/: my_wrapper.vcpp
models/solModels/libFlexMLP_3x2x100x100x2/: CMakeLists.txt  flexMLP-3x2x100x100x2.pt  my_ve_profile.cpp  sol.db
models/solModels/libFlexMLP_3x2x100x100x2/shared_lib/src/: libFlexMLP.c  libFlexMLP.h  libFlexMLP_example.c
models/solModels/libFlexMLP_3x2x100x100x2/ve/src/: ve_9BC88669.h  ve_9BC88669_FI.cpp  ve_9BC88669_FI_dfp_ncc_62.cpp  ve_9BC88669_FI_dfp_ncc_69.cpp  ve_9BC88669_FI_dfp_ncc_6D.cpp  ve_9BC88669_dfp_ncc_0.cpp  ve_9BC88669_dfp_ncc_1.cpp  ve_9BC88669_dfp_ncc_2.cpp  ve_9BC88669_dnn_veblas.cpp  ve_9BC88669_ve.cpp
models/solModels/libFlexMLP_3x2x100x100x2/wrapper/: CMakeLists.txt  my_wrapper.vcpp
models/tensorflowModels/: createFlexCNN2D.py  createFlexCNN3D.py  createModel_tf.py
models/tensorflowModels/flexMLP-2x100x100x2.tf/: keras_metadata.pb  saved_model.pb
models/tensorflowModels/flexMLP-2x100x100x2.tf/variables/: variables.data-00000-of-00001  variables.index
models/torchModels/: createModel.py  flexMLP-2x100x100x2.pt  helper.py  inferModel.py
src/: CMakeLists.txt  aixeleratorService.cpp  aixeleratorService.h  aixeleratorService_interfaceC.cpp  aixeleratorService_interfaceF.f90
src/aixeleratorService/: aixeleratorService.cpp  aixeleratorService.h  aixeleratorService_interfaceC.cpp  aixeleratorService_interfaceC.h  aixeleratorService_interfaceF.f90
src/communicationStrategy/: collectiveCommunication.cpp  collectiveCommunication.h  communicationStrategy.h  nonBlockingPtoPCommunication.cpp  nonBlockingPtoPCommunication.h
src/core/: abstractRegistry.h  adapter.h  adapter_typedefs.h  data_distributor.cpp  data_distributor.h
src/dataConversionStrategy/: dataConversionStrategy.h  openfoamVSFConversion.cpp  openfoamVSFConversion.h
src/dataConversionStrategy/visitor/: inputConverter.h  simulationData.h  visitor.h
src/distributionStrategy/: distributionStrategy.h  gpuAffineRRDistribution.cpp  gpuAffineRRDistribution.h  roundRobinDistribution.cpp  roundRobinDistribution.h
src/frameworks/pytorch/: torchInference.cpp  torchInference.h
src/inferenceStrategy/: inferenceStrategy.h  tensorflowInference.cpp  tensorflowInference.h  torchInference.cpp  torchInference.h  torchInference_interfaceC.h  torchInference_interfaceF.f90
src/inferenceStrategy/onnxInference/: onnxInference.cpp  onnxInference.h
src/inferenceStrategy/solInference/: solInference.cpp  solInference.h
src/inferenceStrategy/tensorflowInference/: tensorflowInference.cpp  tensorflowInference.h  tensorflowInferenceCpp.cpp  tensorflowInferenceCpp.h
src/inferenceStrategy/torchInference/: torchInference.cpp  torchInference.h  torchInference_interfaceC.cpp  torchInference_interfaceC.h  torchInference_interfaceF.f90
src/models/: AIModel.cpp  AIModel.h  AIModelUtils.cpp  AIModelUtils.h  TorchModel.cpp  TorchModel.h
src/utils/: deviceCount.h
test/: .gitattributes  CMakeLists.txt  README.md  run_cpu.sh  tensorflowReproducer.cpp  testAIxeleratorService.cpp  testAIxeleratorService.sh  testAIxeleratorServiceFromC.c  testAIxeleratorServiceFromF.f90  testAIxeleratorServiceHybridTBLTR.cpp  testAIxeleratorServiceSOL.cpp  testAIxeleratorServiceTF.cpp  testAIxeleratorServiceTF.sh  testAIxeleratorServiceTorch.sh  testAixeleratorServiceHetjob.sh  testCudaDevices.cpp  testOFVSFConversion.md  testONNXInference.cpp  testRoundRobinDistribution.cpp  testRoundRobinDistribution.sh  testSOLInference.cpp  testTensorflowInference.cpp  testTensorflowInference.sh  testTensorflowInferenceConvolution2D.cpp  testTensorflowInferenceConvolution3D.cpp  testTensorflowInferenceConvolution3D_multichannel.cpp  testTensorflowInferenceTSRGAN.cpp  testTorchInference.cpp  testTorchInference.sh  testTorchInferenceFromC.c  testTorchInferenceFromF.f90
test/core/: test_adapter.cpp  test_data_distributor.cpp
test/models/: model.pt  testAIModel.cpp  test_AIModel.cpp
